<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@drawable/troutee">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:background="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/login_email"
        android:layout_marginTop="47dp"
        android:background="@drawable/round_textfield"
        android:hint="@string/lbl_email"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password"
        android:layout_below="@+id/login_email"
        android:layout_alignLeft="@+id/login_email"
        android:layout_alignStart="@+id/login_email"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_textfield"
        android:layout_alignRight="@+id/login_email"
        android:layout_alignEnd="@+id/login_email"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/lbl_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/action_sign_in"
        android:id="@+id/button3"
        android:layout_below="@+id/login_password"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignStart="@+id/login_password"
        android:layout_marginTop="61dp"
        android:layout_alignRight="@+id/login_password"
        android:layout_alignEnd="@+id/login_password"
        android:background="@drawable/round_blue"
        android:textColor="#ffffffff"
        android:onClick="login"
        android:textSize="20sp" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/action_create_account"
        android:background="@android:color/transparent"
        android:textSize="20dp"
        android:id="@+id/button5"
        android:textColor="#ffffffff"
        android:onClick="RedirectToSignup"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2" />

</RelativeLayout>
