<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.troutee.activities.UpdateProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/update_profile_img_user_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:src="@drawable/navigation_profile"
        android:onClick="takePictureProfile"
        app:civ_border_width="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/update_profile_email"
        android:background="@drawable/round_textfield"
        android:layout_below="@+id/update_profile_img_user_round"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:hint="@string/lbl_email"
        android:gravity="center_vertical|center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/update_profile_firstname"
        android:background="@drawable/round_textfield"
        android:layout_marginTop="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/lbl_firstname"
        android:singleLine="true"
        android:gravity="center_vertical|center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/update_profile_lastname"
        android:background="@drawable/round_textfield"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/update_profile_firstname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/lbl_lastname"
        android:singleLine="true"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_save"
        android:id="@+id/update_profile_save"
        android:background="@drawable/round_blue"
        android:textColor="#ffffffff"
        android:textSize="20dp"
        android:onClick="updateUser"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/update_profile_lastname"
        android:layout_alignEnd="@+id/update_profile_lastname" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="change pasword"
        android:onClick="showUpdatePasswordDialog"
        android:id="@+id/button"
        android:layout_below="@+id/update_profile_lastname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:layout_alignRight="@+id/update_profile_lastname"
        android:layout_alignEnd="@+id/update_profile_lastname" />

</RelativeLayout>
