<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.troutee.activities.ProfileActivity"
    android:background="#ffffff">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/update_profile_img_user_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:src="@drawable/navigation_profile"
        app:civ_border_width="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="lema017@gmail.com"
        android:id="@+id/profile_email"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/update_profile_img_user_round"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_auto_login"
        android:id="@+id/profile_switch_auto_log_in"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/profile_switch_location_mock"
        android:layout_alignStart="@+id/profile_lbl_member_since"
        android:layout_alignEnd="@+id/profile_switch_location_mock" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_member_since"
        android:id="@+id/profile_lbl_member_since"
        android:layout_below="@+id/profile_switch_auto_log_in"
        android:layout_toLeftOf="@+id/update_profile_img_user_round"
        android:layout_toStartOf="@+id/update_profile_img_user_round"
        android:layout_marginTop="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/profile_lbl_member_since_value"
        android:layout_alignBottom="@+id/profile_lbl_member_since"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_last_login"
        android:id="@+id/profile_lbl_last_login"
        android:layout_below="@+id/profile_lbl_member_since"
        android:layout_marginTop="19dp"
        android:layout_toLeftOf="@+id/update_profile_img_user_round"
        android:layout_alignLeft="@+id/profile_lbl_member_since"
        android:layout_alignStart="@+id/profile_lbl_member_since" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/profile_lbl_last_login_value"
        android:layout_alignBottom="@+id/profile_lbl_last_login"
        android:layout_alignLeft="@+id/profile_lbl_member_since_value"
        android:layout_alignStart="@+id/profile_lbl_member_since_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lbl_total_devices"
        android:id="@+id/profile_lbl_total_devices"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/profile_lbl_last_login"
        android:layout_alignLeft="@+id/profile_lbl_last_login"
        android:layout_alignStart="@+id/profile_lbl_last_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/profile_lbl_total_devices_value"
        android:layout_alignTop="@+id/profile_lbl_total_devices"
        android:layout_alignLeft="@+id/profile_lbl_last_login_value"
        android:layout_alignStart="@+id/profile_lbl_last_login_value" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_btn_edit"
        android:onClick="updateProfile"
        android:background="@drawable/gear"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl__location_mocks"
        android:id="@+id/profile_switch_location_mock"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/profile_lbl_member_since"
        android:layout_toStartOf="@+id/profile_btn_edit" />


</RelativeLayout>
